# tiny-url-app-with-cursor

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cdk.json  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/rules/: new-changes-rule.mdc
.github/workflows/: linting.yml  tests.yml  tests_component.yml  tests_e2e_docker.yml
cdk/: app.py
cdk/lib/: README.md  tiny_url_stack.py
docker/: docker-compose.yml  requirements-container.txt
docker/redirect/: Dockerfile  app.py
docker/shorten/: Dockerfile  app.py
docs/: ARCHITECTURE.md  FEATURES.md  KUBERNETES_LEARNING_PLAN.md  structure.md
k8s/local/: namespace.yaml
k8s/local/dynamodb/: deployment.yaml  init-job.yaml  service.yaml
k8s/local/redirect/: configmap.yaml  deployment.yaml  service.yaml
k8s/local/shorten/: configmap.yaml  deployment.yaml  service.yaml
lib/: __init__.py  tiny_url_stack.py
scripts/: cleanup-k8s-local.sh  destroy-k8s-local.sh  setup-k8s-local.sh  setup-local-dev.sh  test-services.sh
src/: __init__.py
src/handlers/: redirect_url.py  shorten_url.py
src/utils/: api_client.py  api_gateway.py  dynamo_ops.py  short_code_generator.py  url_validator.py
tests/component/: conftest.py  test_redirect_url.py  test_shorten_url.py
tests/e2e/: test_e2e.py  test_shorten_url.py
