[project]
name = "tiny-url-app"
version = "0.1.0"
description = "URL shortening service"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "URL Shortener Team", email = "example@example.com" }]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=src"

[tool.pytest_env]
BASE_URL = "https://tiny.url"
AWS_ACCESS_KEY_ID = "testing"
AWS_SECRET_ACCESS_KEY = "testing"
AWS_SECURITY_TOKEN = "testing"
AWS_SESSION_TOKEN = "testing"
AWS_DEFAULT_REGION = "us-east-1"

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203"]
per-file-ignores = ["tests/*:D103"]
exclude = ["tests/"]
